--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 body{
   background-color: MintCream;
-  margin-left: 40px;
-  margin-top: 40px;
-  margin: <right> 40px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin: <right> 10px;
   margin-bottom: auto;
 
   padding-top: 2.5px;
@@ -17,17 +17,17 @@ body{
 
 h1{
   color:#48D1CC;
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 h2{
   color: rgb(240, 104, 50);
-  margin-left: 45px;
+  margin-left: 25px;
 }
 
 p{
   border-style: dashed;
-  border-width: .5px;
+  border-width: 1.5px;
 
   color: midnightblue;
 
@@ -38,8 +38,8 @@ p{
   text-align: start;
 }
 ul{
-  list-style-type: circle;
-  background: #9ACD32;
+  list-style-type: upper-roman;
+  background: #BDB76B;
   color: darkolivegreen;
   margin: 5px;
 }
