--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,7 @@ body{
 h1{
   color:#48D1CC;
   margin-left: 20px;
+  font-family: verdana;
 }
 
 h2{
@@ -26,6 +27,9 @@ h2{
 }
 
 p{
+  font-family: courier;
+  font-size: 160%;
+  
   border-style: dashed;
   border-width: 1.5px;
 
