--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,13 +15,9 @@ body{
   border-radius: 2.5px;
 }
 
-:root{
-  --main-color: #663300;
-}
-
 /*Styling for the <p> elements*/
 #topicslist{
-  color: var(--main-color, brown);
+  color: var(#663300, brown);
   margin: 5px;
   font-family: Xanh Mono;
 }
